<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:ignore="ExtraText"
    tools:context=".Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="125dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/dslogo"
                android:contentDescription="TODO" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="@string/search_hint"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:padding="8dp"
                android:inputType="text"
                android:id="@+id/searchEditText"
                android:autofillHints="" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/popular_categories"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:id="@+id/password_input"
                android:autofillHints="" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/smartphone"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phones_and_gps_message"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:padding="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <!-- Add more categories here with similar structure -->
                    <!-- Example -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/camera"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:text="@string/cameras"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:src="@drawable/imac" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:text="@string/computer_and_accessories"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/home_cinema"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/audio_and_video"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:padding="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/game_console"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/games_and_consoles"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:padding="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/marketing"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/sign_up_message"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:padding="10dp"
                android:inputType="text"
                android:layout_marginBottom="20dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:padding="18dp"
                android:textSize="20sp"
                android:layout_marginBottom="200dp"/>

            <Button
                android:id="@+id/addToWishlistButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add to Wishlist"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:onClick="addToWishlist" />


        </LinearLayout>
    </ScrollView>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout>